[package]
name = "modurl_gym"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev = "41a674c" }
modurl = { path = "../modurl" }
tracing = { version = "0.1.37", optional = true }
log = { version = "0.4.28", optional = true }

[patch.crates-io]
candle-core = { git = "https://github.com/huggingface/candle", rev = "41a674c" }

[features]
default = []
tracing = ["dep:tracing"]
logging = ["dep:log"]
